# grimoire

./: .gitignore  Cargo.toml  README.md
cantrip_compressor/: Cargo.toml  README.md  bundler.toml
cantrip_compressor/src/: constants.rs  lib.rs  parameters.rs
cantrip_compressor/src/dsp/: compressor.rs  envelope.rs
cantrip_delay/: Cargo.toml  README.md  bundler.toml
cantrip_delay/src/: constants.rs  lib.rs  parameters.rs
cantrip_delay/src/dsp/: delay_line.rs  mod.rs
cantrip_filter/: Cargo.toml  README.md  bundler.toml
cantrip_filter/src/: constants.rs  lib.rs  parameters.rs
cantrip_filter/src/dsp/: biquad.rs  coefficients.rs
cantrip_gain/: Cargo.toml  README.md  bundler.toml
cantrip_gain/src/: lib.rs
scripts/: install_vst.sh
