[package]
name = "cantrip_compressor"
version = "0.1.0"
edition = "2021"
authors = ["flathill404 <38638577+flathill404@users.noreply.github.com>"]
license = "ISC"
homepage = "https://github.com/flathill404/grimoire"
description = "simple compressor"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
